unpackaged/main/default/objects/Epicor_PriceList__c/Epicor_PriceList__c.object-meta.xml
<CustomObject>
    <label>Epicor PriceList</label>
    <nameField>
        <label>Epicor PriceList</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epicor PriceLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>