unpackaged/main/default/objects/Epicor_PriceList__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Epicor PriceLists</relationshipLabel>
    <relationshipName>Epicor_PriceLists</relationshipName>
    <type>Lookup</type>
</CustomField>