unpackaged/main/default/objects/Epicor_PriceList__c/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <label>CurrencyCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>