unpackaged/main/default/objects/Epicor_PriceList__c/fields/CustID__c.field-meta.xml
<CustomField>
    <fullName>CustID__c</fullName>
    <label>CustID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>