unpackaged/main/default/objects/Epicor_PriceList__c/fields/CustName__c.field-meta.xml
<CustomField>
    <fullName>CustName__c</fullName>
    <label>CustName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>