unpackaged/main/default/objects/Epicor_PriceList__c/fields/EXTId__c.field-meta.xml
<CustomField>
    <fullName>EXTId__c</fullName>
    <label>﻿EXTId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>