unpackaged/main/default/objects/Epicor_PriceList__c/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <label>IsDefault</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>