unpackaged/main/default/objects/Epicor_PriceList__c/fields/ListCode__c.field-meta.xml
<CustomField>
    <fullName>ListCode__c</fullName>
    <label>ListCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>