unpackaged/main/default/objects/Epicor_PriceList__c/fields/PartDescription__c.field-meta.xml
<CustomField>
    <fullName>PartDescription__c</fullName>
    <label>PartDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>