unpackaged/main/default/objects/Epicor_PriceList__c/fields/PartNum__c.field-meta.xml
<CustomField>
    <fullName>PartNum__c</fullName>
    <label>PartNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>