unpackaged/main/default/objects/Epicor_PriceList__c/fields/PriceID__c.field-meta.xml
<CustomField>
    <fullName>PriceID__c</fullName>
    <label>PriceID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>