unpackaged/main/default/objects/Epicor_PriceList__c/fields/PriceListName__c.field-meta.xml
<CustomField>
    <fullName>PriceListName__c</fullName>
    <label>PriceListName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>