unpackaged/main/default/objects/Epicor_PriceList__c/fields/xPartNum__c.field-meta.xml
<CustomField>
    <fullName>xPartNum__c</fullName>
    <inlineHelpText>This field is what is being used to match on</inlineHelpText>
    <label>Cat Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>