unpackaged/main/default/objects/Epicor_PriceList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>EXTId__c</columns>
    <columns>Company__c</columns>
    <columns>PriceID__c</columns>
    <columns>CustID__c</columns>
    <columns>CustName__c</columns>
    <columns>PartNum__c</columns>
    <columns>xPartNum__c</columns>
    <columns>PartDescription__c</columns>
    <columns>Price__c</columns>
    <columns>ListCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>